# cosmology-api

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.rst  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml  label_pr.yml
docs/: conf.py  index.rst  introduction.rst
src/cosmology/api/: __init__.py  __version__.py
src/cosmology/api/compat/: __init__.py  _core.py  _standard.py
tests/: test_package.py
tests/api/: conftest.py
